--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -89,6 +88,11 @@
         ::-webkit-scrollbar { display: none; }
       }
     </style>
+  <script>
+    // [CRITICAL POLYFILL] Fix for "process is not defined" in browser environments
+    window.process = window.process || { env: {} };
+    window.global = window;
+  </script>
   <script type="importmap">
 {
   "imports": {
@@ -107,5 +111,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900 antialiased selection:bg-indigo-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
